--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.1",
+    "react-tabs": "^6.1.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lightningcss": "^1.30.1",
     "vite": "^7.1.2"
   }
 }
